--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,40 @@
   </head>
   <body>
     <h1>CSS Framework</h1>
+
+    <!-- Badges -->
+    <h1>
+      Heading with Bedge
+      <span class="badge badge-pill badge-primary">Badge</span>
+    </h1>
+    <h2>
+      Heading with Bedge
+      <span class="badge badge-secondary">Badge</span>
+    </h2>
+    <h3>
+      Heading with Bedge
+      <span class="badge badge-pill badge-info">Badge</span>
+    </h3>
+    <h3>
+      Heading with Bedge
+      <span class="badge badge-success">Badge</span>
+    </h3>
+    <h3>
+      Heading with Bedge
+      <span class="badge badge-warning">Badge</span>
+    </h3>
+    <h3>
+      Heading with Bedge
+      <span class="badge badge-pill badge-danger">Badge</span>
+    </h3>
+    <h3>
+      Heading with Bedge
+      <span class="badge badge-dark">Badge</span>
+    </h3>
+    <h3>
+      Heading with Bedge
+      <span class="badge badge-light">Badge</span>
+    </h3>
     <script src="./js/app.js"></script>
   </body>
 </html>
