Added Breadcrumbs styles

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,24 @@
       Heading with Bedge
       <span class="badge badge-light">Badge</span>
     </h3>
+
+    <!-- Breadcrumbs -->
+    <nav class="breadcrumb">
+      <ol>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">Library</a>
+        </li>
+        <li>
+          <a href="#">Books</a>
+        </li>
+        <li>
+          Data
+        </li>
+      </ol>
+    </nav>
     <script src="./js/app.js"></script>
   </body>
 </html>
