--- a/src/index.html
+++ b/src/index.html
@@ -1,66 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CSS Framework</title>
-    <link rel="stylesheet" href="./scss/app.scss">
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>CSS Framework</title>
+  <link rel="stylesheet" href="./scss/app.scss">
+</head>
+
+<body>
+  <div id="customcard">
     <h1>CSS Framework</h1>
+  </div>
+  <p id="text-area">Some text....</p>
+  <button id='ok-button'>Button</button>
+  <!-- Badges -->
+  <h1>
+    Heading with Bedge
+    <span class="badge badge-pill badge-primary">Badge</span>
+  </h1>
+  <h2>
+    Heading with Bedge
+    <span class="badge badge-secondary">Badge</span>
+  </h2>
+  <h3>
+    Heading with Bedge
+    <span class="badge badge-pill badge-info">Badge</span>
+  </h3>
+  <h3>
+    Heading with Bedge
+    <span class="badge badge-success">Badge</span>
+  </h3>
+  <h3>
+    Heading with Bedge
+    <span class="badge badge-warning">Badge</span>
+  </h3>
+  <h3>
+    Heading with Bedge
+    <span class="badge badge-pill badge-danger">Badge</span>
+  </h3>
+  <h3>
+    Heading with Bedge
+    <span class="badge badge-dark">Badge</span>
+  </h3>
+  <h3>
+    Heading with Bedge
+    <span class="badge badge-light">Badge</span>
+  </h3>
 
-    <!-- Badges -->
-    <h1>
-      Heading with Bedge
-      <span class="badge badge-pill badge-primary">Badge</span>
-    </h1>
-    <h2>
-      Heading with Bedge
-      <span class="badge badge-secondary">Badge</span>
-    </h2>
-    <h3>
-      Heading with Bedge
-      <span class="badge badge-pill badge-info">Badge</span>
-    </h3>
-    <h3>
-      Heading with Bedge
-      <span class="badge badge-success">Badge</span>
-    </h3>
-    <h3>
-      Heading with Bedge
-      <span class="badge badge-warning">Badge</span>
-    </h3>
-    <h3>
-      Heading with Bedge
-      <span class="badge badge-pill badge-danger">Badge</span>
-    </h3>
-    <h3>
-      Heading with Bedge
-      <span class="badge badge-dark">Badge</span>
-    </h3>
-    <h3>
-      Heading with Bedge
-      <span class="badge badge-light">Badge</span>
-    </h3>
+  <!-- Breadcrumbs -->
+  <nav class="breadcrumb">
+    <ol>
+      <li>
+        <a href="#">Home</a>
+      </li>
+      <li>
+        <a href="#">Library</a>
+      </li>
+      <li>
+        <a href="#">Books</a>
+      </li>
+      <li>
+        Data
+      </li>
+    </ol>
+  </nav>
+  <script src="./js/app.js"></script>
+  <script src="./js/alert.js"></script>
+</body>
 
-    <!-- Breadcrumbs -->
-    <nav class="breadcrumb">
-      <ol>
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#">Library</a>
-        </li>
-        <li>
-          <a href="#">Books</a>
-        </li>
-        <li>
-          Data
-        </li>
-      </ol>
-    </nav>
-    <script src="./js/app.js"></script>
-  </body>
 </html>
