Added styles for buttons

--- a/src/index.html
+++ b/src/index.html
@@ -66,8 +66,20 @@
       </li>
     </ol>
   </nav>
+
+  <!-- Buttons -->
+  <p><a href="#" class="btn btn-primary btn-block">Primary Button</a></p>
+  <p><a href="#" class="btn btn-outline-primary">Primary Outline Button</a></p>
+  <p><a href="#" class="btn btn-secondary">Secondary Button</a></p>
+  <p><a href="#" class="btn btn-success btn-sm">Small Success Button</a></p>
+  <p><a href="#" class="btn btn-warning">Warning Button</a></p>
+  <p><a href="#" class="btn btn-danger">Danger Button</a></p>
+  <p><a href="#" class="btn btn-info">Info Button</a></p>
+  <p><a href="#" class="btn btn-light">Light Button</a></p>
+  <p><button class="btn btn-dark">Dark Button</a></p>
+  <p><button class="btn btn-primary" disabled>Disabled Button</a></p>
+
   <script src="./js/app.js"></script>
-  <script src="./js/alert.js"></script>
 </body>
 
 </html>
