--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,18 @@
 </head>
 
 <body>
+  <div id="navbar">
+    <a href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+  </div>
+
   <div id="customcard">
     <h1>CSS Framework</h1>
   </div>
   <p id="text-area">Some text....</p>
   <button id='ok-button'>Button</button>
+
   <!-- Badges -->
   <h1>
     Heading with Bedge
