Added defer to index.html js. Made loading time faster.

--- a/src/index.html
+++ b/src/index.html
@@ -73,8 +73,8 @@
       </li>
     </ol>
   </nav>
-  <script src="./js/app.js"></script>
-  <script src="./js/alert.js"></script>
+  <script defer src="./js/app.js"></script>
+  <script defer src="./js/alert.js"></script>
 </body>
 
 </html>
